work of the day
Completed login page; page now searches for name/password on database. created homepage where agents can see clients in system.  created logout script to end php session.

--- a/style.css
+++ b/style.css
@@ -89,3 +89,12 @@
 #footer a {
 	color: inherit;
 }
+.navbar-custom {
+	background-color: #1fa67b;
+}
+.navbar-default .navbar-nav>li>a {
+	color: #ffffff;
+}
+.navbar-default .navbar-brand {
+	color: #ffffff;
+}
